samples/_failures_safe/1761253059_e01463_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ac2fd44.c: In function ‘main’:
./samples/SAFE/__tmp_1ac2fd44.c:167:5: error: expected ‘,’ or ‘;’ at end of input
  167 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_1ac2fd44.c:167:5: error: expected declaration or statement at end of input
